<resources>
    <string name="app_name">MovieMemoir</string>
    <string name="username">Username/E-Mail</string>
    <string name="password">Password</string>
    <string name="button_signIn">Sign In</string>
    <string name="button_signUp">Sign Up</string>
    <string name="firstName">First Name</string>
    <string name="surname">Surname</string>
    <string name="gender">Gender</string>
    <string name="dob">Date of Birth</string>
    <string name="address">Address</string>
    <string name="state">State</string>
    <string name="postcode">Postcode</string>
    <string name="register">Register</string>
    <string-array name="state_array">
        <item>ACT</item>
        <item>New South Wales</item>
        <item>Northern Territory</item>
        <item>Queensland</item>
        <item>South Australia</item>
        <item>Tasmania</item>
        <item>Victoria</item>
        <item>Western Australia</item>
    </string-array>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_logout">Log Out</string>

    <string name="menu_home">Movie Memoir</string>
    <string name="menu_movieSearch">Movie Search</string>
    <string name="home">Home</string>
    <string name="home_second">Home Second</string>
    <string name="movie_name">Movie Name</string>
    <string name="user_rating">User Rating</string>
    <string name="release_date">Release Date</string>
    <string name="search">Search</string>
    <string name="genre">Genre</string>
    <string name="cast">Cast</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="plot">Plot</string>
    <string name="director">Director</string>
    <string name="country">Country</string>
    <string name="add_to_watchlist">Add to Watchlist</string>
    <string name="add_to_memoir">Add to Memoir</string>
    <string name="menu_watchlist">Watchlist</string>
    <string name="added_watchlist">Added to Watchlist</string>
    <string name="view">View</string>
    <string name="delete">Delete</string>
    <string name="user_add_datetime">User Add DateTime</string>
    <string name="select_watch_date">Select Watch Date</string>
    <string name="select_watch_time">Select Watch Time</string>
    <string name="cinema_name">Cinema Name</string>
    <string name="add_new_cinema">Add New Cinema</string>
    <string name="opinion">Opinion</string>
    <string name="memoir">Memoir</string>
    <string name="cinema_postcode">Cinema Postcode</string>
    <string name="report">Report</string>
    <string name="filter">Filter</string>
    <string name="sort">Sort</string>
    <string name="start_watchlist_service">Start watchlist service</string>
    <string name="stop_watchlist_service">Stop watchlist service</string>
    <string name="make_chart">Make Chart</string>
    <string name="start_date">Start Date</string>
    <string name="make_bar">Make Bar</string>
    <string-array name="sort_array">
        <item>User Rating</item>
        <item>Public Rating</item>
        <item>User Watch Date</item>
    </string-array>
    <string-array name="bar_array">
        <item>2015</item>
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
    </string-array>
    <string name="title_activity_maps">Map</string>
    <string name="map">Map</string>
    <string name="delete_all">Delete All</string>

</resources>
