<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    android:background="@color/cardview_dark_background">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_movie_search"
            android:title="@string/menu_movieSearch" />
        <item
            android:id="@+id/nav_watchlist"
            android:title="@string/menu_watchlist" />
        <item
            android:id="@+id/nav_memoir"
            android:title="@string/memoir"/>
        <item
            android:id="@+id/nav_report"
            android:title="@string/report"/>
        <item
            android:id="@+id/map"
            android:title="@string/map"/>
    </group>
</menu>
