<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:clickable="true"
    android:layout_height="wrap_content"
    tools:ignore="KeyboardInaccessibleWidget">

    <TextView
        android:id="@+id/Movie_name_watch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/movie_name" />
    <TextView
        android:id="@+id/Rel_date_watch"
        android:layout_width="0px"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:text="@string/release_date"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/UserAddDate_watch"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="15sp"
        android:layout_width="0px"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:text="@string/user_add_datetime" />


</LinearLayout>