<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="edu.monash.MovieMemoir.ui.home.HomeFragment"
        android:label="@string/menu_home"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout="@layout/fragment_home" >

    </fragment>

    <fragment
        android:id="@+id/nav_movie_search"
        android:name="edu.monash.MovieMemoir.ui.movieSearch.MovieSearchFragment"
        android:label="@string/menu_movieSearch"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout="@layout/fragment_moviesearch" />

    <fragment
        android:id="@+id/nav_watchlist"
        android:name="edu.monash.MovieMemoir.ui.watchlist.WatchlistFragment"
        android:label="@string/menu_watchlist"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout="@layout/fragment_watchlist" />
    <fragment
        android:id="@+id/nav_memoir"
        android:name="edu.monash.MovieMemoir.MemoirFragment"
        android:label="Memoirs"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout="@layout/fragment_memoir" />
    <fragment
        android:id="@+id/nav_report"
        android:name="edu.monash.MovieMemoir.FragmentReport"
        android:label="Reports"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout="@layout/fragment_report" />
</navigation>