<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddToMemoir">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        >

        <DatePicker
            android:id="@+id/datePickerUserWatchDate"
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:layout_marginStart="64dp"
            android:calendarViewShown="false"
            android:datePickerMode="spinner"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_watch_date" />

        <TimePicker
            android:id="@+id/timePickerUserWatchDate"
            android:layout_width="390dp"
            android:layout_height="149dp"
            android:timePickerMode="spinner"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tex_watch_time" />

        <TextView
            android:id="@+id/text_watch_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="80dp"
            android:text="@string/select_watch_date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView_add_memoir_poster" />

        <TextView
            android:id="@+id/tex_watch_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="19dp"
            android:text="@string/select_watch_time"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/datePickerUserWatchDate" />

        <TextView
            android:id="@+id/text_cinema_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:text="@string/cinema_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/timePickerUserWatchDate" />

        <Spinner
            android:id="@+id/spinner_cinema_name"
            android:layout_width="387dp"
            android:layout_height="41dp"
            android:layout_marginStart="1dp"
            android:layout_marginTop="9dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_cinema_name" />

        <Button
            android:id="@+id/button_new_cinema"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="23dp"
            android:text="@string/add_new_cinema"
            app:layout_constraintStart_toEndOf="@+id/text_opinion"
            app:layout_constraintTop_toBottomOf="@+id/spinner_cinema_name" />

        <TextView
            android:id="@+id/text_opinion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="48dp"
            android:text="@string/opinion"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinner_cinema_name" />

        <RatingBar
            android:id="@+id/userRatingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_user_rating" />

        <EditText
            android:id="@+id/multi_line_text_opinion"
            android:layout_width="340dp"
            android:layout_height="114dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="2dp"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_opinion" />

        <TextView
            android:id="@+id/text_user_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="9dp"
            android:text="@string/user_rating"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/multi_line_text_opinion" />

        <Button
            android:id="@+id/button_add_to_memoir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="136dp"
            android:layout_marginTop="10dp"
            android:text="@string/add_to_memoir"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userRatingBar" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="184dp"
            android:layout_marginTop="912dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView_add_memoir_poster"
            android:layout_width="120dp"
            android:layout_height="150dp"
            android:layout_marginStart="136dp"
            android:layout_marginTop="1dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_launcher_background" />

        <TextView
            android:id="@+id/movie_name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:text="@string/movie_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView_add_memoir_poster" />

        <TextView
            android:id="@+id/rel_date_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="@string/release_date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/rel_date_info_text" />

        <TextView
            android:id="@+id/movie_name_info_text"
            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="92dp"
            android:layout_marginTop="17dp"
            app:layout_constraintStart_toEndOf="@+id/movie_name_text"
            app:layout_constraintTop_toBottomOf="@+id/imageView_add_memoir_poster" />

        <TextView
            android:id="@+id/rel_date_info_text"
            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="88dp"
            app:layout_constraintStart_toEndOf="@+id/rel_date_text"
            app:layout_constraintTop_toBottomOf="@+id/movie_name_info_text" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>