<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MovieInfoView" >

    <TextView
        android:id="@+id/plot_info"
        android:layout_width="264dp"
        android:layout_height="135dp"
        android:layout_marginStart="136dp"
        android:layout_marginTop="236dp"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_poster" />

    <TextView
        android:id="@+id/cast_info"
        android:layout_width="264dp"
        android:layout_height="39dp"
        android:layout_marginStart="136dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_poster" />

    <TextView
        android:id="@+id/director_info"
        android:layout_width="264dp"
        android:layout_height="28dp"
        android:layout_marginStart="136dp"
        android:layout_marginTop="196dp"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_poster" />

    <TextView
        android:id="@+id/rel_date_info"
        android:layout_width="264dp"
        android:layout_height="28dp"
        android:layout_marginStart="136dp"
        android:layout_marginTop="108dp"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_poster" />

    <TextView
        android:id="@+id/genre_info"
        android:layout_width="264dp"
        android:layout_height="28dp"
        android:layout_marginStart="136dp"
        android:layout_marginTop="64dp"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_poster" />

    <TextView
        android:id="@+id/text_country"
        android:layout_width="114dp"
        android:layout_height="28dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="156dp"
        android:text="@string/country"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_poster" />

    <TextView
        android:id="@+id/text_director"
        android:layout_width="114dp"
        android:layout_height="28dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="196dp"
        android:text="@string/director"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_poster" />

    <TextView
        android:id="@+id/text_plot"
        android:layout_width="114dp"
        android:layout_height="28dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="236dp"
        android:text="@string/plot"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_poster" />

    <TextView
        android:id="@+id/text_rel_date"
        android:layout_width="114dp"
        android:layout_height="28dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="108dp"
        android:text="@string/release_date"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_poster" />

    <TextView
        android:id="@+id/text_genre"
        android:layout_width="114dp"
        android:layout_height="28dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="64dp"
        android:text="@string/genre"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_poster" />

    <ImageView
        android:id="@+id/imageView_poster"
        android:layout_width="391dp"
        android:layout_height="200dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher"
        android:contentDescription="TODO" />

    <TextView
        android:id="@+id/text_cast"
        android:layout_width="114dp"
        android:layout_height="35dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/cast"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_poster" />

    <TextView
        android:id="@+id/country_info"
        android:layout_width="264dp"
        android:layout_height="28dp"
        android:layout_marginStart="136dp"
        android:layout_marginTop="156dp"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_poster" />

    <Button
        android:id="@+id/button_add_watch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="137dp"
        android:layout_marginTop="21dp"
        android:text="@string/add_to_watchlist"
        android:background="@color/colorPrimary"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plot_info" />
</androidx.constraintlayout.widget.ConstraintLayout>